Fixed gap under footer on tablet/mobile view.

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -397,7 +397,7 @@
 
   .loginbg.productbackgroundwrapper {
     top:250px;
-    height:111rem;
+    height:70rem;
   }
 
   /*about page*/
@@ -474,6 +474,10 @@
     margin-top:3rem;
   }
 
+  .paybg.productbackgroundwrapper {
+    height:70rem;
+  }
+
 }
 
 @media (max-width:414px){
@@ -515,7 +519,7 @@
 
   .loginbg.productbackgroundwrapper {
     top:250px;
-    height:82rem;
+    height:75rem;
   }
 
   .seemore, .reviewsheading {
